# Iphone_Mirroring

./: CMakeLists.txt  README.md  msys2_index.html  rpiplay.cpp  setup-rpiplay.bat  setup-rpiplay.ps1  投屏.lnk
lib/: CMakeLists.txt  byteutils.c  compat.h  dnssd.c  netutils.c  raop_ntp.c  raop_rtp_mirror.c  threads.h
renderers/: CMakeLists.txt  audio_renderer_gstreamer.c  video_renderer_gstreamer.c
